--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "amanto",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=20.18.0",
+    "pnpm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro preview --host 0.0.0.0",
     "astro": "astro",
-    "start": "astro dev"
+    "start": "astro preview --host 0.0.0.0"
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
